# local-pdf-chat-app

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml
src/: chain.py  config.py  pdf_processor.py  vectorstore.py
tests/: conftest.py  test_pdf_processor.py
