[project]
name = "pdf-chat-app"
version = "0.1.0"
description = "Chat with any PDF — fully local RAG with LangChain, Streamlit, and Ollama"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.40",
    "langchain-core>=1.0",
    "langchain-text-splitters>=1.0",
    "langchain-ollama>=1.0",
    "pypdf>=5.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "reportlab>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
